--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
+version: "3.9"
 services:
   web:
-    restart: always
     image: konbigog/webapi
     build: .
     ports:
       - "8080:8080"
-    command: app/webapi
+    restart: always
